--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@ai-sdk/openai": "^0.0.70",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-slot": "^1.1.0",
+    "@spotify/web-api-ts-sdk": "^1.2.0",
     "@tabler/icons-react": "^3.20.0",
     "ai": "^3.4.20",
     "class-variance-authority": "^0.7.0",
